<resources>
    <string name="app_name">Fully Integrated Reference Application</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="initialize_ct_framework">Initialize Contact Framework</string>
    <string name="set_term_config">Set Terminal Configuration</string>
    <string name="emv_config">EMV Configuration</string>
    <string name="set_aid_config">Set AID Configuration</string>
    <string name="set_capk_config">Set CAPK Configugration</string>
    <string name="apply_ct_config">Apply Contact Configuration</string>
    <string name="card_detect">Card Detect</string>
    <string name="txn">Transaction</string>
    <string name="start_transaction">Start Transaction</string>
    <string name="set_ct_config">Set Contact Configuration</string>
    <string name="set_ct_aid_config">Set Contact AID Configuration</string>
    <string name="set_ct_capk_config">Set Contact CAPK Configuration</string>
    <string name="set_ctls_capk_config">Set CTLS CAPK Configuration</string>
    <string name="set_ctls_aid_config">Set CTLS AID Configuration</string>
    <string name="set_ctls_config">Set CTLS Configuration</string>
    <string name="start_ctls_transaction">Start Ctls Transaction</string>
    <string name="print_bmp">Print BMP</string>
    <string name="print_html">Print HTML</string>
    <string name="print_bmp_hacked">Print BMP (Hacked)</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="log_ct_config">Log Contact Configuration</string>
    <string name="log_ctls_config">Log CTLS Configuration</string>
    <string name="start_manual_entry_transaction">Manual Entry Transaction</string>
    <string name="start_nfc_transaction">Process NFC card</string>
    <string name="update_service">Update Service</string>
    <string name="install_apk">Install Apk</string>
    <string name="uninstall_apk">UnInstall Apk</string>
    <string name="install_super_package">Install Super Package</string>
    <string name="install_android_ota_package">Install Android Ota</string>
    <string name="uninstall_package">UnInstall Package</string>
    <string name="last_recovery_log_status">Last Recovery Log Status</string>
    <string name="standard_mode">Standard Mode</string>
    <string name="kiosk_mode">Kiosk Mode</string>
    <string name="wifi">WiFi</string>
    <string name="platform_features">Platform Features</string>
    <string name="device_admin_description">Device Admin Description</string>
    <string name="device_admin">Device Admin</string>
    <string name="send">Send</string>
    <string name="usb">USB</string>
</resources>
