<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.priv.verifone.psdk.sdiapplication.ui.updateservice.UpdateServiceFragment">

    <data>

        <variable
            name="viewModel"
            type="com.priv.verifone.psdk.sdiapplication.ui.updateservice.UpdateServiceViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/button_black_border"
                android:onClick="@{() -> viewModel.installApk()}"
                android:text="@string/install_apk" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/button_black_border"
                android:onClick="@{() -> viewModel.unInstallApk()}"
                android:text="@string/uninstall_apk" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/button_black_border"
                android:onClick="@{() -> viewModel.installAndroidOtaPackage()}"
                android:text="@string/install_android_ota_package" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/button_black_border"
                android:onClick="@{() -> viewModel.installSuperPackage()}"
                android:text="@string/install_super_package" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/button_black_border"
                android:onClick="@{() -> viewModel.fetchLastRecoveryStatus()}"
                android:text="@string/last_recovery_log_status" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>