<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.priv.verifone.psdk.sdiapplication.ui.config.ConfigurationFragment">
    <data>
        <variable
            name="viewModel"
            type="com.priv.verifone.psdk.sdiapplication.ui.config.SdiConfigurationViewModel" />
    </data>
    <androidx.appcompat.widget.LinearLayoutCompat

        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_ct_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_black_border"
            android:onClick="@{() -> viewModel.setContactConfig()}"
            android:text="@string/set_ct_config" />

        <Button
            android:id="@+id/btn_ctls_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_black_border"
            android:onClick="@{() -> viewModel.setCtlsConfig()}"
            android:text="@string/set_ctls_config" />

        <Button
            android:id="@+id/btn_log_ct_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_black_border"
            android:onClick="@{() -> viewModel.logCtConfig()}"
            android:text="@string/log_ct_config" />

        <Button
            android:id="@+id/btn_log_ctls_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_black_border"
            android:onClick="@{() -> viewModel.logCtlsConfig()}"
            android:text="@string/log_ctls_config" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>