<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.priv.verifone.psdk.sdiapplication.ui.usb.UsbFragment">

    <data>

        <variable
            name="viewModel"
            type="com.priv.verifone.psdk.sdiapplication.ui.usb.UsbViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.operationStatus}"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <TextView
            android:id="@+id/receivedData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.receivedData}"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status"
            app:layout_constraintVertical_bias="0.45" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/receivedData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:background="@drawable/button_black_border"
                android:onClick="@{() -> viewModel.connect()}"
                android:text="@string/connect" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:background="@drawable/button_black_border"
                android:onClick="@{() -> viewModel.send()}"
                android:text="@string/send" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:background="@drawable/button_black_border"
                android:onClick="@{() -> viewModel.disconnect()}"
                android:text="@string/disconnect" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>