<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.priv.verifone.psdk.sdiapplication.ui.platform.PlatformFragment">

    <data>

        <variable
            name="viewModel"
            type="com.priv.verifone.psdk.sdiapplication.ui.platform.PlatformViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/modeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.textMode}"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <LinearLayout
            android:id="@+id/layoutOpsMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/modeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnNormalMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:background="@drawable/button_black_border"
                android:onClick="@{() -> viewModel.useStandardMode()}"
                android:text="@string/standard_mode" />

            <Button
                android:id="@+id/btnKioskMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:background="@drawable/button_black_border"
                android:onClick="@{() -> viewModel.useKioskMode()}"
                android:text="@string/kiosk_mode" />

        </LinearLayout>

        <Button
            android:id="@+id/btnWifi"
            app:layout_constraintTop_toBottomOf="@+id/layoutOpsMode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:background="@drawable/button_black_border"
            android:onClick="@{() -> viewModel.setupWifi()}"
            android:text="@string/wifi" />

        <TextView
            android:id="@+id/brightnessText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Brightness"
            app:layout_constraintTop_toBottomOf="@+id/btnWifi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <SeekBar
            android:id="@+id/brightnessSlider"
            app:layout_constraintTop_toBottomOf="@+id/brightnessText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="125" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchBluetooth"
            android:paddingTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/brightnessText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Bluetooth" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>