<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.verifone.psdk.sdiapplication.ui.transaction.TransactionFragment">
    <data>
        <variable
            name="viewModel"
            type="com.verifone.psdk.sdiapplication.ui.transaction.SdiTransactionViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:id="@+id/ctls_led_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:gravity="center"
            android:visibility="@{viewModel.showLeds}">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:LedImage="@{viewModel.led1}" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:LedImage="@{viewModel.led2}" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:LedImage="@{viewModel.led3}" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:LedImage="@{viewModel.led4}" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <Button
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ctls_led_layout"
            android:id="@+id/btn_start_txn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_black_border"
            android:visibility="@{viewModel.idleState}"
            android:onClick="@{() -> viewModel.startTransaction()}"
            android:text="@string/start_transaction" />

        <Button
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_start_txn"
            android:id="@+id/btn_start_manual_entry_txn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_black_border"
            android:visibility="@{viewModel.idleState}"
            android:onClick="@{() -> viewModel.startManualEntryTransaction()}"
            android:text="@string/start_manual_entry_transaction" />

        <Button
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_start_manual_entry_txn"
            android:id="@+id/btn_print_bmp_hacked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_black_border"
            android:visibility="@{viewModel.idleState}"
            android:onClick="@{() -> viewModel.printBmpHacked()}"
            android:text="@string/print_bmp_hacked" />

        <Button
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_print_bmp_hacked"
            android:id="@+id/btn_print_bmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_black_border"
            android:visibility="@{viewModel.idleState}"
            android:onClick="@{() -> viewModel.printBmp()}"
            android:text="@string/print_bmp" />

        <Button
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_print_bmp"
            android:id="@+id/btn_print_html"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_black_border"
            android:visibility="@{viewModel.idleState}"
            android:onClick="@{() -> viewModel.printHtml()}"
            android:text="@string/print_html" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/pin_entry_layout"
            android:visibility="@{viewModel.sensitiveDataEntryState}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:text="@{viewModel.sensitiveDataTitle}"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="28dp"
                android:background="@drawable/pin_entry_border"
                android:text="@{viewModel.sensitiveDataDigits}"/>
            <GridLayout
                android:layout_width="match_parent"
                android:visibility="@{viewModel.showSoftKeypad}"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="4">

                <Button
                    android:id="@+id/button1"
                    android:layout_gravity="fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/numeric_keypad_button_margin"
                    android:text="1" />
                <Button
                    android:id="@+id/button2"
                    android:layout_gravity="fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/numeric_keypad_button_margin"
                    android:text="2" />
                <Button
                    android:id="@+id/button3"
                    android:layout_gravity="fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/numeric_keypad_button_margin"
                    android:text="3" />
                <Button
                    android:id="@+id/button4"
                    android:layout_gravity="fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/numeric_keypad_button_margin"
                    android:text="4" />
                <Button
                    android:id="@+id/button5"
                    android:layout_gravity="fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/numeric_keypad_button_margin"
                    android:text="5" />
                <Button
                    android:id="@+id/button6"
                    android:layout_gravity="fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/numeric_keypad_button_margin"
                    android:text="6" />
                <Button
                    android:id="@+id/button7"
                    android:layout_gravity="fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/numeric_keypad_button_margin"
                    android:text="7" />
                <Button
                    android:id="@+id/button8"
                    android:layout_gravity="fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/numeric_keypad_button_margin"
                    android:text="8" />
                <Button
                    android:id="@+id/button9"
                    android:layout_gravity="fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/numeric_keypad_button_margin"
                    android:text="9" />
                <Button
                    android:id="@+id/buttonClear"
                    android:layout_gravity="fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/numeric_keypad_button_margin"
                    android:backgroundTint="@color/yellow"
                    android:text="Clear" />
                <Button
                    android:id="@+id/button0"
                    android:layout_gravity="fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/numeric_keypad_button_margin"
                    android:text="0" />
                <Button
                    android:id="@+id/buttonConfirm"
                    android:layout_gravity="fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/numeric_keypad_button_margin"
                    android:backgroundTint="@color/text_green"
                    android:text="@{viewModel.sensitiveDataGreenButtonText}" />
            </GridLayout>
            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:text="Cancel" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <Button
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="@{viewModel.transactionInProgress}"
            android:id="@+id/buttonTxnCancel"
            android:layout_margin="@dimen/margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:onClick="@{() -> viewModel.abort()}"
            android:text="Cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>